Added example of repository
